rust/crates/cb-plugins/tests/snapshots/integration_test__go_plugin_definition_snapshot.snap
---
source: crates/cb-plugins/tests/integration_test.rs
expression: response.data
---
locations:
  - range:
      end:
        character: 20
        line: 15
      start:
        character: 5
        line: 15
    uri: "file:///src/main.go"
