rust/crates/cb-plugins/tests/snapshots/integration_test__python_plugin_hover_snapshot.snap
---
source: crates/cb-plugins/tests/integration_test.rs
expression: response.data
---
hover:
  contents:
    kind: markdown
    value: "```python\ndef my_function(x: int, y: int) -> int\n```\n\nCalculates the sum of two numbers"
